--- a/FrontEnd/src/components/Header/styles.css
+++ b/FrontEnd/src/components/Header/styles.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
+  position: sticky;
   top: 0;
   height: 12rem;
   width: 100%;
@@ -21,9 +21,8 @@
   color: var(--primary-color-green);
 }
 
-.rightContent h1{
-  text-align: right;
-  width: 32rem;
+.homeTitle{
+  font-size: 1.5rem;
 }
 
 .rightContent a{
