--- a/FrontEnd/src/global.css
+++ b/FrontEnd/src/global.css
@@ -7,7 +7,7 @@
   --primary-color-green: #00a84a;
   --primary-color-gray: #485156;
   --secondary-color-gray: #e9e9e9;
-  --primary-color-orange: #ff8c00;
+  --primary-color-red: #FF0000;
   /* Padding Geral */
   --padding-geral: 0 10rem;
   /* Default Font Sizes */
